[package]
name = "odata-parser-rs"
version = "0.1.0"
authors = ["Mathias Pius <contact@pius.io>"]
edition = "2018"
description = "OData EDMX v1.0 parser"
keywords = ["odata", "folketinget", "parser", "opendata"]
repository = "https://github.com/Datavirke/odata-parser-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.22.0", features = ["serialize"] }
serde = { version = "1.0.126", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
